Navbar compatibility for bootstrap 3.3.x, fixed navbar content not aligned on the right side

--- a/web/static/style.css
+++ b/web/static/style.css
@@ -3,13 +3,13 @@
  * This file is part of the Pycroft project and licensed under the terms of
  * the Apache License, Version 2.0. See the LICENSE file for details.
  */
-a.navbar-brand {
-    padding: 0px 15px;
-}
-
 ul.nav li.dropdown:hover > ul.dropdown-menu {
     display: block;
     margin: 0;
+}
+
+.navbar-right{
+    margin-right: 0 !important;
 }
 
 .tt-suggestion.tt-cursor {
